2010-04-08  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger.addin.xml:
	* MonoDevelop.Debugger/WatchPad.cs:
	* MonoDevelop.Debugger/DebugCommands.cs:
	* MonoDevelop.Debugger/DebuggingService.cs:
	* MonoDevelop.Debugger/ObjectValueTreeView.cs: Added a context
	  menu to ObjectValueTreeView, which includes a command which
	  allows adding a value to the watch pad.

2010-04-08  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger/ObjectValueTreeView.cs: Don't set
	  change the pin icon while editing.

2010-04-06  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui/gui.stetic:
	* gtk-gui/MonoDevelop.Debugger.BreakpointPropertiesDialog.cs:
	  Remove dead space at bottom of dialog.

2010-03-24  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/MonoDevelop.Debugger.BreakpointPropertiesDialog.cs:
	  Flush.

	* MonoDevelop.Debugger/StackTracePad.cs: Alloy copying the
	  call stack to the clipboard. Added context menu.

2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger.addin.xml:
	* MonoDevelop.Debugger/DebugCommands.cs: Fixed some command
	  descriptions.

2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.Debugger.addin.xml: Bumped MD version.

2010-03-18  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Debugger.addin.xml: Set the default location for
	  debug pads. Register a new Debug layout.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.Debugger.csproj:
	* MonoDevelop.Debugger.addin.xml:
	* MonoDevelop.Debugger/WatchPad.cs:
	* MonoDevelop.Debugger/LocalsPad.cs:
	* MonoDevelop.Debugger/Extensions.cs:
	* MonoDevelop.Debugger/ThreadsPad.cs:
	* MonoDevelop.Debugger/Initializer.cs:
	* MonoDevelop.Debugger/ImmediatePad.cs:
	* MonoDevelop.Debugger/StackTracePad.cs:
	* MonoDevelop.Debugger/DebugCommands.cs:
	* MonoDevelop.Debugger/BreakpointPad.cs:
	* MonoDevelop.Debugger/ObjectValuePad.cs: