@@ -1,3 +1,8 @@
+2010-04-13  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Main.cs: Add unit test for bug 595270: Flags enums in
+	  debugger show the zero value.
+
 2010-03-02  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Main.cs: Added boxing tests. Disable assignment tests for
